--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -20,104 +19,47 @@
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/scripts.js"></script>
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1"
-            >
+          <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
+             
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
               <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">Brand</a>
-            <div
-              class="collapse navbar-collapse"
-              id="bs-example-navbar-collapse-1"
-            >
+            </button> <a class="navbar-brand" href="#">Brand</a>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#"
-                    >Link <span class="sr-only">(current)</span></a
-                  >
+                   <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                   <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="http://example.com"
-                    id="navbarDropdownMenuLinkk"
-                    data-toggle="dropdown"
-                    >Dropdown link</a
-                  >
-                  <div
-                    class="dropdown-menu"
-                    aria-labelledby="navbarDropdownMenuLink"
-                  >
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
+                   <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                     <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-divider">
+                    </div> <a class="dropdown-item" href="#">Separated link</a>
                   </div>
                 </li>
               </ul>
               <form class="form-inline">
-                <input class="form-control mr-sm-2" type="text" />
+                <input class="form-control mr-sm-2" type="text"> 
                 <button class="btn btn-primary my-2 my-sm-0" type="submit">
                   Search
                 </button>
               </form>
               <ul class="navbar-nav ml-md-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#"
-                    >Link <span class="sr-only">(current)</span></a
-                  >
+                   <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="http://example.com"
-                    id="navbarDropdownMenuLink"
-                    data-toggle="dropdown"
-                    >Dropdown link</a
-                  >
-                  <div
-                    class="dropdown-menu dropdown-menu-right"
-                    aria-labelledby="navbarDropdownMenuLink"
-                  >
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
+                   <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                     <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-divider">
+                    </div> <a class="dropdown-item" href="#">Separated link</a>
                   </div>
                 </li>
               </ul>
